# rust-typi-experiment

./: Cargo.toml  README.md
src/: lib.rs  main.rs  parser.rs  resolution.rs  signals.rs  type_checker.rs  types.rs
src/tests/: type_checker.rs
