[package]
name = "rust-typi-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "^0.99"
oxc = { version = "^0.13", features = ["serialize"] }
serde = { version = "^1.0.202", features = ["derive", "rc"] }
serde_json = "^1.0.117"
strum = { version = "^0.26.2", features = ["derive"] }
